# roscon2023_control_workshop

./: README.md  roscon2023_control_workshop.ci.repos  roscon2023_control_workshop.repos
docker/: Dockerfile  docker-compose.yaml
example_4/bringup/config/: rrbot_with_sensor_controllers.yaml
example_4/bringup/launch/: rrbot_system_with_sensor.launch.py  test_forward_position_controller.launch.py
example_5/bringup/launch/: test_forward_position_controller.launch.py
example_5/description/urdf/: rrbot_system_with_external_sensor.urdf.xacro
hercules_description/: CMakeLists.txt  package.xml
hercules_description/config/: hercules_1_controllers.yaml  hercules_2_controllers.yaml  hercules_controllers.yaml  multi_hercules_controllers.yaml  test_dual_goal_publishers_config.yaml  test_multi_cm_dual_goal_publishers_config.yaml  test_multi_dual_goal_publishers_config.yaml
hercules_description/launch/: dual_ur_sim_control.launch.py  hercules_controllers.launch.py  hercules_sim_control.launch.py  multi_cm_hercules_sim_control.launch.py  multi_hercules_sim_control.launch.py  test_dual_ur_controllers.launch.py  test_hercules_controllers.launch.py  test_multi_cm_hercules_controllers.launch.py  test_multi_hercules_controllers.launch.py
hercules_description/rviz/: view_robot.rviz
hercules_description/urdf/: dual_ur.urdf.xacro  hercules.urdf.xacro  hercules_macro.urdf.xacro  multi_hercules.urdf.xacro
roscon2023_control_workshop/: CMakeLists.txt  package.xml
tiago_chaining/: CMakeLists.txt  package.xml
tiago_chaining/config/: controllers.yaml  model_and_tf.rviz  tiago_full_unrolled.urdf
tiago_chaining/launch/: key_teleop.launch.xml  rviz.launch.xml  tiago_chaining.launch.xml  tiago_mock.launch.xml  tiago_show.launch.xml  tiago_warmup.launch.xml
twist_relay/: CMakeLists.txt  controller_plugins.xml  package.xml
twist_relay/include/twist_relay/: twist_relay_controller.hpp
twist_relay/src/: twist_relay_controller.cpp  twist_relay_controller_parameter.yaml
