<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hercules_description</name>
  <version>0.0.0</version>
  <description>Description files of Hercules robot used in the workshop. The name and design of the robot is curtosy for Brett Aldrich (Robosoft).</description>
  <maintainer email="denis@stoglrobotics.de">Dr. Denis Stogl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_controllers_test_nodes</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
