<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tiago_chaining</name>
  <version>0.0.0</version>
  <description>Showcasing chaining controllers with the TIAGo robot</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <author email="bence.magyar.robotics@gmail.com">Bence Magyar</author>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>tiago_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
