<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_relay_controller</name>
  <version>0.0.0</version>
  <description>A wonderful controller relaying parts of a twist message</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
